# fastapi-template

./: README.md  docker-compose.yml
service1/: .env.example  Dockerfile  pyproject.toml
service1/app/: main.py
service1/app/config/: config.py
service1/app/db/: database.py
service1/app/migration/: env.py
