[project]
name = "service1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "pydantic-settings>=2.12.0",
    "alembic>=1.18.3",
]
